uptime-monitor/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-monitor
  namespace: hmpps-interventions-prod
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3001
  selector:
    app: uptime-monitor
