uptime-monitor/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-monitor
  namespace: hmpps-interventions-prod
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: "uptime-monitor-hmpps-interventions-prod-green"
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - status-refer-monitor-intervention.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: status-refer-monitor-intervention.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: uptime-monitor
            port:
              number: 80
